*SVN*

* Fixed db_schema_import when binary types are present #3101 [DHH]

* Fixed that MySQL enums should always be returned as strings #3501 [DHH]

* Change has_many :through to use the :source option to specify the source association.  :class_name is now ignored. [Rick Olson]

    class Connection < ActiveRecord::Base
      belongs_to :user
      belongs_to :channel
    end

    class Channel < ActiveRecord::Base
      has_many :connections
      has_many :contacts, :through => :connections, :class_name => 'User' # OLD
      has_many :contacts, :through => :connections, :source => :user      # NEW
    end

* Fixed DB2 adapter so nullable columns will be determines correctly now and quotes from column default values will be removed #4350 [contact@maik-schmidt.de]

* Allow overriding of find parameters in scoped has_many :through calls [Rick Olson]

  In this example, :include => false disables the default eager association from loading.  :select changes the standard
  select clause.  :joins specifies a join that is added to the end of the has_many :through query.
  
    class Post < ActiveRecord::Base
      has_many :tags, :through => :taggings, :include => :tagging do
        def add_joins_and_select
          find :all, :select => 'tags.*, authors.id as author_id', :include => false,
            :joins => 'left outer join posts on taggings.taggable_id = posts.id left outer join authors on posts.author_id = authors.id'
        end
      end
    end
    
* Fixed that schema changes while the database was open would break any connections to a SQLite database (now we reconnect if that error is throw) [DHH]

* Don't classify the has_one class when eager loading, it is already singular. Add tests. (closes #4117) [jonathan@bluewire.net.nz]

* Quit ignoring default :include options in has_many :through calls [Mark James]

* Allow has_many :through associations to find the source association by setting a custom class (closes #4307) [jonathan@bluewire.net.nz]
